fix: wrapper bg color stretch whole height

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   font-family: Lato, sans-serif;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
 
 .header {
